rest-frontend: 'home' page
- change slogan & sub-slogan
- add buttons below slogan to getting started sections and examples

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -5,6 +5,14 @@
 		<h2 class="slogan-slave text-center">
 			<small>{{ 'APP.HOME.HEADLINE.SLOGAN.SECOND' | translate }}</small>
 		</h2>
+		<div class="text-center md-pt-10">
+			<button class="btn btn-success" ui-sref="main.dyn.docgettingstarted">
+				{{ 'APP.HOME.BUTTON.GETSTARTED' | translate }}
+			</button>
+			<button class="btn btn-primary" ui-sref="main.dyn.examples">
+				{{ 'APP.HOME.BUTTON.EXAMPLES' | translate }}
+			</button>
+		</div>
 		<hr />
 		<!-- Selling points -->
 		<div class="row">
