rest-frontend: add preview description for news posts
- on the 'home' page listed news do now have an additional short, introductory description
- improved script for news generation
- added short description to all news posts

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -101,8 +101,11 @@
 				<div class="list-group md-mt-20">
 					<a ng-repeat="post in news" ui-sref="main.news({file: post.slug})" class="list-group-item"
 					   ng-class="{active: $first}">
-						<h4 class="list-group-item-heading">{{ post.title }}</h4>
-						<p class="list-group-item-text">{{ post.date }}</p>
+						<div class="clearfix">
+							<h4 class="list-group-item-heading pull-left">{{ post.title }}</h4>
+							<p class="list-group-item-text pull-right">{{ post.date }}</p>
+						</div>
+						<p class="list-group-item-text">{{ post.shortDesc }}</p>
 					</a>
 				</div>
 			</div>
