rest-frontend: increase spacing between key facts on 'home' page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -17,72 +17,84 @@
 		<!-- Selling points -->
 		<div class="row">
 			<div class="col-md-4">
-				<div class="media">
-					<div class="media-left">
-						<i class="media-icon fa fa-sitemap"></i>
+				<div class="md-pl-15 md-pr-15">
+					<div class="media">
+						<div class="media-left">
+							<i class="media-icon fa fa-sitemap"></i>
+						</div>
+						<div class="media-right media-middle">
+							<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.1.HEADLINE' | translate }}</h4>
+						</div>
 					</div>
-					<div class="media-right media-middle">
-						<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.1.HEADLINE' | translate }}</h4>
-					</div>
+					<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.1.DETAILS' | translate }}</span>
 				</div>
-				<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.1.DETAILS' | translate }}</span>
 			</div>
 			<div class="col-md-4">
-				<div class="media">
-					<div class="media-left">
-						<i class="media-icon fa fa-book"></i>
+				<div class="md-pl-15 md-pr-15">
+					<div class="media">
+						<div class="media-left">
+							<i class="media-icon fa fa-book"></i>
+						</div>
+						<div class="media-right media-middle">
+							<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.2.HEADLINE' | translate }}</h4>
+						</div>
 					</div>
-					<div class="media-right media-middle">
-						<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.2.HEADLINE' | translate }}</h4>
-					</div>
+					<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.2.DETAILS' | translate }}</span>
 				</div>
-				<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.2.DETAILS' | translate }}</span>
 			</div>
 			<div class="col-md-4">
-				<div class="media">
-					<div class="media-left">
-						<i class="media-icon fa fa-puzzle-piece"></i>
+				<div class="md-pl-15 md-pr-15">
+					<div class="media">
+						<div class="media-left">
+							<i class="media-icon fa fa-puzzle-piece"></i>
+						</div>
+						<div class="media-right media-middle">
+							<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.3.HEADLINE' | translate }}</h4>
+						</div>
 					</div>
-					<div class="media-right media-middle">
-						<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.3.HEADLINE' | translate }}</h4>
-					</div>
+					<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.3.DETAILS' | translate }}</span>
 				</div>
-				<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.3.DETAILS' | translate }}</span>
 			</div>
 		</div>
 		<div class="row md-mt-30">
 			<div class="col-md-4">
-				<div class="media">
-					<div class="media-left">
-						<i class="media-icon fa fa-link"></i>
+				<div class="md-pl-15 md-pr-15">
+					<div class="media">
+						<div class="media-left">
+							<i class="media-icon fa fa-link"></i>
+						</div>
+						<div class="media-right media-middle">
+							<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.4.HEADLINE' | translate }}</h4>
+						</div>
 					</div>
-					<div class="media-right media-middle">
-						<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.4.HEADLINE' | translate }}</h4>
-					</div>
+					<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.4.DETAILS' | translate }}</span>
 				</div>
-				<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.4.DETAILS' | translate }}</span>
 			</div>
 			<div class="col-md-4">
-				<div class="media">
-					<div class="media-left">
-						<i class="media-icon fa fa-check"></i>
+				<div class="md-pl-15 md-pr-15">
+					<div class="media">
+						<div class="media-left">
+							<i class="media-icon fa fa-check"></i>
+						</div>
+						<div class="media-right media-middle">
+							<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.5.HEADLINE' | translate }}</h4>
+						</div>
 					</div>
-					<div class="media-right media-middle">
-						<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.5.HEADLINE' | translate }}</h4>
-					</div>
+					<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.5.DETAILS' | translate }}</span>
 				</div>
-				<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.5.DETAILS' | translate }}</span>
 			</div>
 			<div class="col-md-4">
-				<div class="media">
-					<div class="media-left">
-						<i class="media-icon fa fa-cogs"></i>
+				<div class="md-pl-15 md-pr-15">
+					<div class="media">
+						<div class="media-left">
+							<i class="media-icon fa fa-cogs"></i>
+						</div>
+						<div class="media-right media-middle">
+							<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.6.HEADLINE' | translate }}</h4>
+						</div>
 					</div>
-					<div class="media-right media-middle">
-						<h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.6.HEADLINE' | translate }}</h4>
-					</div>
+					<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.6.DETAILS' | translate }}</span>
 				</div>
-				<span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.6.DETAILS' | translate }}</span>
 			</div>
 		</div>
 		<hr />
