rest-frontend: add more info to 'home' page
- changed sanitize strategy of translation module (support directives in loca-strings)
- re-ordered translation file
- added three new orientation blocks to the 'home' page with customizable content

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -99,8 +99,8 @@
 		</div>
 		<hr />
 		<div class="row">
+			<!-- Introduction video -->
 			<div class="col-md-8">
-				<!-- Introduction video -->
 				<h3 class="text-center">{{ 'APP.HOME.HEADLINE.HOWITWORKS' | translate }}</h3>
 				<div class="text-center">
 					<script type="text/javascript" src="https://asciinema.org/a/cantr04assr4jkv8v34uz9b8r.js"
@@ -108,6 +108,7 @@
 					</script>
 				</div>
 			</div>
+			<!-- Recent news -->
 			<div class="col-md-4">
 				<h3 class="text-center">{{ 'APP.HOME.HEADLINE.WHATSNEW' | translate }}</h3>
 				<div class="list-group md-mt-20">
@@ -119,6 +120,31 @@
 						</div>
 						<p class="list-group-item-text">{{ post.shortDesc }}</p>
 					</a>
+				</div>
+			</div>
+		</div>
+		<hr />
+		<!-- Orientation helper -->
+		<div class="row md-mb-40">
+			<div class="col-md-4">
+				<div class="md-pl-15 md-pr-15">
+					<h4>{{ 'APP.HOME.LABEL.ORIENTATION.1.HEADLINE' | translate }}</h4>
+					<span translate="APP.HOME.LABEL.ORIENTATION.1.DETAILS" translate-compile>
+					</span>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="md-pl-15 md-pr-15">
+					<h4>{{ 'APP.HOME.LABEL.ORIENTATION.2.HEADLINE' | translate }}</h4>
+					<span translate="APP.HOME.LABEL.ORIENTATION.2.DETAILS" translate-compile>
+					</span>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="md-pl-15 md-pr-15">
+					<h4>{{ 'APP.HOME.LABEL.ORIENTATION.3.HEADLINE' | translate }}</h4>
+					<span translate="APP.HOME.LABEL.ORIENTATION.3.DETAILS" translate-compile>
+					</span>
 				</div>
 			</div>
 		</div>
