rest-frontend: add changing adjective to slogan

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -1,7 +1,7 @@
 <div class="row home">
 	<div class="col-md-12">
 		<!-- Slogan & Headline -->
-		<h1 class="slogan-master text-center">{{ 'APP.HOME.HEADLINE.SLOGAN.FIRST' | translate }}</h1>
+		<h1 class="slogan-master text-center">{{ 'APP.HOME.HEADLINE.SLOGAN.FIRST' | translate:slogan }}</h1>
 		<h2 class="slogan-slave text-center">
 			<small>{{ 'APP.HOME.HEADLINE.SLOGAN.SECOND' | translate }}</small>
 		</h2>
