rest-frontend: add feedback button + change KEYFACT loca

--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -107,6 +107,14 @@
     <div class="container">
         <div ncy-breadcrumb></div>
         <p class="text-right copyright">
+            <span>
+                <a href="https://github.com/ElektraInitiative/libelektra/issues/new">
+                    {{ 'APP.GLOBAL.FOOTER.LINK.TITLE.FEEDBACK' | translate }}
+                </a>
+            </span>
+            <span class="md-ml-10 md-mr-10">
+                &diams;
+            </span>
             <span date-now="yyyy"></span> &copy; <a href="http://libelektra.org">ElektraInitiative</a>
             <a class="scroll-to-top text-info" ng-click="ctrl.scrollToTop()"
                title="{{ 'APP.GLOBAL.FOOTER.LINK.TITLE.SCROLLTOTOP' | translate }}">
