rest-frontend: switch examples button with tutorials button on home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -9,8 +9,8 @@
             <button class="btn btn-success" ui-sref="main.dyn.docgettingstarted">
                 {{ 'APP.HOME.BUTTON.GETSTARTED' | translate }}
             </button>
-            <button class="btn btn-primary" ui-sref="main.dyn.examples">
-                {{ 'APP.HOME.BUTTON.EXAMPLES' | translate }}
+            <button class="btn btn-primary" ui-sref="main.dyn.tutorials">
+                {{ 'APP.HOME.BUTTON.TUTORIALS' | translate }}
             </button>
         </div>
         <hr />
