--- a/src/tools/rest-frontend/public/pages/main/entries/form.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/form.html
@@ -195,6 +195,10 @@
                     <tags-input ng-model="entry.tags"
                                 min-length="3"
                                 max-length="20"
+                                add-on-blur="true"
+                                add-on-enter="true"
+                                add-on-space="true"
+                                replace-spaces-with-dashes="true"
                                 allowed-tags-pattern="^[a-z0-9\-\.]{3,20}$">
                         <auto-complete source="typeaheads.tags"></auto-complete>
                     </tags-input>
