rest-frontend: update font-awesome to v4.7 + change keyfact icon to battery-full

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -61,7 +61,7 @@
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
                         <div class="media-left">
-                            <i class="media-icon fa fa-link"></i>
+                            <i class="media-icon fa fa-battery-full"></i>
                         </div>
                         <div class="media-right media-middle">
                             <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.4.HEADLINE' | translate }}</h4>
