rest-frontend: add icons to orientation blocks (home page)

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -128,21 +128,30 @@
         <div class="row md-mb-40">
             <div class="col-md-4">
                 <div class="md-pl-15 md-pr-15">
-                    <h4>{{ 'APP.HOME.LABEL.ORIENTATION.1.HEADLINE' | translate }}</h4>
+                    <h4>
+                        <i class="fa fa-plug"></i>
+                        <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.1.HEADLINE' | translate }}</span>
+                    </h4>
                     <span translate="APP.HOME.LABEL.ORIENTATION.1.DETAILS" translate-compile>
                     </span>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="md-pl-15 md-pr-15">
-                    <h4>{{ 'APP.HOME.LABEL.ORIENTATION.2.HEADLINE' | translate }}</h4>
+                    <h4>
+                        <i class="fa fa-code"></i>
+                        <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.2.HEADLINE' | translate }}</span>
+                    </h4>
                     <span translate="APP.HOME.LABEL.ORIENTATION.2.DETAILS" translate-compile>
                     </span>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="md-pl-15 md-pr-15">
-                    <h4>{{ 'APP.HOME.LABEL.ORIENTATION.3.HEADLINE' | translate }}</h4>
+                    <h4>
+                        <i class="fa fa-question-circle-o"></i>
+                        <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.3.HEADLINE' | translate }}</span>
+                    </h4>
                     <span translate="APP.HOME.LABEL.ORIENTATION.3.DETAILS" translate-compile>
                     </span>
                 </div>
