--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -108,6 +108,14 @@
         <div ncy-breadcrumb></div>
         <p class="text-right copyright">
             <span>
+                <a href="{{ config.website.url }}rss/feed.rss">
+                    <img src="assets/img/rss-feed-14x14.png" />
+                </a>
+            </span>
+            <span class="md-ml-10 md-mr-10">
+                &diams;
+            </span>
+            <span>
                 <a href="https://github.com/ElektraInitiative/libelektra/issues/new">
                     {{ 'APP.GLOBAL.FOOTER.LINK.TITLE.FEEDBACK' | translate }}
                 </a>
