rest-frontend: change rss feed link + add icon (gitignore fix)

--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -108,7 +108,7 @@
         <div ncy-breadcrumb></div>
         <p class="text-right copyright">
             <span>
-                <a href="{{ config.website.url }}rss/feed.rss">
+                <a href="rss/feed.rss" type="application/atom+xml" target="_self">
                     <img src="assets/img/rss-feed-14x14.png" />
                 </a>
             </span>
