--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -57,7 +57,7 @@
                                     active: $state.includes('main.dyn.' + entry.ref), dropdown: entry.type === 'submenu'}"
                         ng-attr-uib-dropdown="{{ entry.type === 'submenu' && '' || undefined }}">
                         <a ng-if="entry.type === 'listfiles'" ui-sref="{{ 'main.dyn.' + entry.ref }}">{{ entry.name }}</a>
-                        <a ng-if="entry.type === 'link'" href="{{ entry.options.path }}">
+                        <a ng-if="entry.type === 'link'" href="{{ entry.options.path }}" target="_blank">
                             <i class="fa fa-external-link"></i> {{ entry.name }}
                         </a>
                         <a ng-if="entry.type === 'submenu'" href="#" uib-dropdown-toggle>
@@ -66,7 +66,7 @@
                         <ul ng-if="entry.type === 'submenu'" uib-dropdown-menu>
                             <li ng-repeat="subentry in entry.children">
                                 <a ng-if="subentry.type === 'listfiles'" ui-sref="{{ 'main.dyn.' + subentry.ref }}">{{ subentry.name }}</a>
-                                <a ng-if="subentry.type === 'link'" href="{{ subentry.options.path }}">
+                                <a ng-if="subentry.type === 'link'" href="{{ subentry.options.path }}" target="_blank">
                                     <i class="fa fa-external-link"></i> {{ subentry.name }}
                                 </a>
                             </li>
