rest-frontend: added no-script warning and reference to github

--- a/src/tools/rest-frontend/public/index.html
+++ b/src/tools/rest-frontend/public/index.html
@@ -50,6 +50,17 @@
 
     <body>
 
+		<noscript>
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="alert alert-danger md-mt-50" role="alert">
+						<p>This website was designed using JavaScript.</p>
+						<p>If you have troubles getting the website to work, please go to our <a href="https://github.com/ElektraInitiative/libelektra">GitHub page</a> and file an issue. All content of the website can also be found in the GitHub repository, so you won't miss anything browsing it instead!</p>
+					</div>
+				</div>
+			</div>
+		</noscript>
+
         <!-- Space for Sub-Templates -->
         <div ui-view></div>
 
