--- a/src/tools/rest-frontend/public/pages/main/users/search.html
+++ b/src/tools/rest-frontend/public/pages/main/users/search.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<div class="row u-marginTl" ng-show="options.is_advanced">
+<div class="row sm-mt-15" ng-show="options.is_advanced">
     <div class="col-md-3">
         <div class="form-group">
             <label class="control-label">{{ 'APP.USERS.SEARCH.ADVANCED.LABEL.FILTERBY' | translate }}</label>
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div class="row u-marginTl">
+<div class="row sm-mt-15">
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -81,7 +81,7 @@
     </table>
 </div>
 
-<div class="row u-marginTl">
+<div class="row">
     <div class="col-md-12">
         <nav class="text-center">
             <ul class="pagination">
