rest-frontend: add some more white-space to home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -13,7 +13,7 @@
                 {{ 'APP.HOME.BUTTON.TUTORIALS' | translate }}
             </button>
         </div>
-        <hr />
+        <hr class="md-mt-40 md-mb-40" />
         <!-- Selling points -->
         <div class="row">
             <div class="col-md-4">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-        <hr />
+        <hr class="md-mt-40" />
         <div class="row">
             <!-- Introduction video -->
             <div class="col-md-8">
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <hr />
+        <hr class="md-mb-30" />
         <!-- Orientation helper -->
         <div class="row md-mb-40">
             <div class="col-md-4">
