rest-frontend: prepare for copying of images

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -125,7 +125,7 @@
         </div>
         <hr class="md-mb-30" />
         <!-- Orientation helper -->
-        <div class="row md-mb-40">
+        <div class="row">
             <div class="col-md-4">
                 <div class="md-pl-15 md-pr-15">
                     <h4>
@@ -157,5 +157,9 @@
                 </div>
             </div>
         </div>
+		<hr class="md-mt-40 md-mb-40" />
+		<div class="row">
+			
+		</div>
     </div>
 </div>
