rest-frontend: add qtgui, snippet sharing and application-integration-tutorial to homepage

--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -1,4 +1,4 @@
-<header>
+<header id="top">
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <div class="navbar-header col-md-3">
