--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -157,9 +157,35 @@
                 </div>
             </div>
         </div>
+		<div class="row md-mt-30">
+			<div class="col-md-8">
+				<div class="md-pl-15 md-pr-15">
+					<h4>
+						<i class="fa fa-share-alt"></i>
+						<span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.4.HEADLINE' | translate }}</span>
+					</h4>
+					<p translate="APP.HOME.LABEL.ORIENTATION.4.DETAILS" translate-compile></p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="md-pl-15 md-pr-15">
+					<h4>
+						<i class="fa fa-bolt"></i>
+						<span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.5.HEADLINE' | translate }}</span>
+					</h4>
+					<p translate="APP.HOME.LABEL.ORIENTATION.5.DETAILS" translate-compile></p>
+				</div>
+			</div>
+		</div>
 		<hr class="md-mt-40 md-mb-40" />
 		<div class="row">
-			
+			<div class="col-md-6">
+				<img src="website/img/qtgui.png" style="width:100%" />
+			</div>
+			<div class="col-md-6">
+				<h4>{{ 'APP.HOME.LABEL.TOOL.QTGUI.HEADLINE' | translate }}</h4>
+				<p translate="APP.HOME.LABEL.TOOL.QTGUI.DETAILS" translate-compile></p>
+			</div>
 		</div>
     </div>
 </div>
