rest-frontend: responsiveness fixes for menu and home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -13,7 +13,7 @@
                 {{ 'APP.HOME.BUTTON.TUTORIALS' | translate }}
             </button>
         </div>
-        <hr class="md-mt-40 md-mb-40" />
+        <hr class="sm-mt-40 sm-mb-40" />
         <!-- Selling points -->
         <div class="row">
             <div class="col-md-4">
@@ -29,7 +29,7 @@
                     <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.1.DETAILS' | translate }}</span>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
                         <div class="media-left">
@@ -42,7 +42,7 @@
                     <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.2.DETAILS' | translate }}</span>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
                         <div class="media-left">
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="row md-mt-30">
+        <div class="row lg-mt-30 sm-mt-20">
             <div class="col-md-4">
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
@@ -70,7 +70,7 @@
                     <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.4.DETAILS' | translate }}</span>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
                         <div class="media-left">
@@ -83,7 +83,7 @@
                     <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.5.DETAILS' | translate }}</span>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
                         <div class="media-left">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-        <hr class="md-mt-40" />
+        <hr class="sm-mt-40 sm-mb-15" />
         <div class="row">
             <!-- Introduction video -->
             <div class="col-md-8">
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <hr class="md-mb-30" />
+        <hr class="sm-mb-30" />
         <!-- Orientation helper -->
         <div class="row">
             <div class="col-md-4">
@@ -136,7 +136,7 @@
                     </span>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <h4>
                         <i class="fa fa-code"></i>
@@ -146,7 +146,7 @@
                     </span>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <h4>
                         <i class="fa fa-question-circle-o"></i>
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </div>
-		<div class="row md-mt-30">
+		<div class="row lg-mt-30 sm-mt-10">
 			<div class="col-md-8">
 				<div class="md-pl-15 md-pr-15">
 					<h4>
@@ -167,7 +167,7 @@
 					<p translate="APP.HOME.LABEL.ORIENTATION.4.DETAILS" translate-compile></p>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 lg-mt-0 sm-mt-20">
 				<div class="md-pl-15 md-pr-15">
 					<h4>
 						<i class="fa fa-bolt"></i>
@@ -177,12 +177,12 @@
 				</div>
 			</div>
 		</div>
-		<hr class="md-mt-40 md-mb-40" />
+		<hr class="sm-mt-30 sm-mb-40" />
 		<div class="row">
 			<div class="col-md-6">
 				<img src="website/img/qtgui.png" style="width:100%" />
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 lg-mt-0 sm-mt-20">
 				<h4>{{ 'APP.HOME.LABEL.TOOL.QTGUI.HEADLINE' | translate }}</h4>
 				<p translate="APP.HOME.LABEL.TOOL.QTGUI.DETAILS" translate-compile></p>
 			</div>
