--- a/src/tools/rest-frontend/public/pages/main/entries/details.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/details.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="pull-right md-mb-10">
+        <div class="pull-right sm-mb-10">
             <a class="btn btn-sm btn-danger"
                ng-show="authenticated" has-rank-or-is-owner="{rank: 50, owner: entry.meta.author}"
                ng-click="ctrl.deleteEntry()">
