rest-frontend: add links to keyfacts

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -23,10 +23,10 @@
                             <i class="media-icon fa fa-sitemap"></i>
                         </div>
                         <div class="media-right media-middle">
-                            <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.1.HEADLINE' | translate }}</h4>
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.1.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.1.DETAILS' | translate }}</span>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.1.DETAILS" translate-compile></span>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -36,10 +36,10 @@
                             <i class="media-icon fa fa-book"></i>
                         </div>
                         <div class="media-right media-middle">
-                            <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.2.HEADLINE' | translate }}</h4>
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.2.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.2.DETAILS' | translate }}</span>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.2.DETAILS" translate-compile></span>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -49,10 +49,10 @@
                             <i class="media-icon fa fa-puzzle-piece"></i>
                         </div>
                         <div class="media-right media-middle">
-                            <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.3.HEADLINE' | translate }}</h4>
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.3.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.3.DETAILS' | translate }}</span>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.3.DETAILS" translate-compile></span>
                 </div>
             </div>
         </div>
@@ -64,10 +64,10 @@
                             <i class="media-icon fa fa-battery-full"></i>
                         </div>
                         <div class="media-right media-middle">
-                            <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.4.HEADLINE' | translate }}</h4>
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.4.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.4.DETAILS' | translate }}</span>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.4.DETAILS" translate-compile></span>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -77,10 +77,10 @@
                             <i class="media-icon fa fa-check"></i>
                         </div>
                         <div class="media-right media-middle">
-                            <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.5.HEADLINE' | translate }}</h4>
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.5.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.5.DETAILS' | translate }}</span>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.5.DETAILS" translate-compile></span>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -90,10 +90,10 @@
                             <i class="media-icon fa fa-cogs"></i>
                         </div>
                         <div class="media-right media-middle">
-                            <h4 class="media-heading">{{ 'APP.HOME.LABEL.KEYFACT.6.HEADLINE' | translate }}</h4>
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.6.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details">{{ 'APP.HOME.LABEL.KEYFACT.6.DETAILS' | translate }}</span>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.6.DETAILS" translate-compile></span>
                 </div>
             </div>
         </div>
