rest-frontend: add webgui to home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -187,5 +187,14 @@
 				<p translate="APP.HOME.LABEL.TOOL.QTGUI.DETAILS" translate-compile></p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-4 sm-mt-20">
+				<h4>{{ 'APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE' | translate }}</h4>
+				<p translate="APP.HOME.LABEL.TOOL.WEBGUI.DETAILS" translate-compile></p>
+			</div>
+			<div class="col-md-8 sm-mt-20">
+				<img src="website/img/web-gui-kdb.png" style="width:100%" />
+			</div>
+		</div>
     </div>
 </div>
