--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -196,5 +196,14 @@
 				<img src="website/img/web-gui-kdb.png" style="width:100%" />
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-6 sm-mt-20">
+				<img src="website/img/oyranos-kolor-manager.png" style="width:100%" />
+			</div>
+			<div class="col-md-6 sm-mt-20">
+				<h4>{{ 'APP.HOME.LABEL.TOOL.OTHERS.HEADLINE' | translate }}</h4>
+				<p translate="APP.HOME.LABEL.TOOL.OTHERS.DETAILS" translate-compile></p>
+			</div>
+		</div>
     </div>
 </div>
