rest-frontend: horizontal lines between GUIs on home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -177,7 +177,7 @@
 				</div>
 			</div>
 		</div>
-		<hr class="sm-mt-30 sm-mb-40" />
+		<hr class="sm-mt-30 sm-mb-30" />
 		<div class="row">
 			<div class="col-md-8">
 				<img src="website/img/qtgui.png" style="width:100%" />
@@ -187,22 +187,24 @@
 				<p translate="APP.HOME.LABEL.TOOL.QTGUI.DETAILS" translate-compile></p>
 			</div>
 		</div>
+		<hr class="sm-mt-20 lg-mt-30 sm-mb-20 lg-mb-30">
 		<div class="row">
-			<div class="col-md-4 sm-mt-20">
-				<h4>{{ 'APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE' | translate }}</h4>
-				<p translate="APP.HOME.LABEL.TOOL.WEBGUI.DETAILS" translate-compile></p>
-			</div>
-			<div class="col-md-8 sm-mt-20">
-				<img src="website/img/web-gui-kdb.png" style="width:100%" />
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8 sm-mt-20">
-				<img src="website/img/oyranos-kolor-manager.png" style="width:100%" />
-			</div>
-			<div class="col-md-4 sm-mt-20">
+			<div class="col-md-4 sm-mb-30 lg-mb-0">
 				<h4>{{ 'APP.HOME.LABEL.TOOL.OTHERS.HEADLINE' | translate }}</h4>
 				<p translate="APP.HOME.LABEL.TOOL.OTHERS.DETAILS" translate-compile></p>
+			</div>
+			<div class="col-md-8">
+				<img src="website/img/oyranos-kolor-manager.png" style="width:100%;margin:-15px 0px;" />
+			</div>
+		</div>
+		<hr class="sm-mt-30 lg-mt-30 sm-mb-30">
+		<div class="row sm-mb-20">
+			<div class="col-md-8 sm-mb-30 lg-mb-0">
+				<img src="website/img/web-gui-kdb.png" style="width:100%" />
+			</div>
+			<div class="col-md-4">
+				<h4>{{ 'APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE' | translate }}</h4>
+				<p translate="APP.HOME.LABEL.TOOL.WEBGUI.DETAILS" translate-compile></p>
 			</div>
 		</div>
     </div>
